--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-	<meta charset="UTF-8">
-	<title>Timer</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="css/main.css" />
 	<script src="js/main.js"></script>
+	<title>Timer</title>
 </head>
 <body>
 
 <div class="time-display"
-	><div class="time-display-section time-display-section-hours"
-		><div class="time-display-section-inner"><output id="out--hours-1">0</output></div></div
+	><div class="time-display-section time-display-section-hours"><div class="time-display-section-inner"
+		><output id="out--hours-1">0</output
+	></div></div
 	><div class="time-display-divider">:</div
-	><div class="time-display-section time-display-section-minutes"
-		><div class="time-display-section-inner"><output id="out--minutes-1">0</output
-		><output id="out--minutes-2">0</output></div></div
+	><div class="time-display-section time-display-section-minutes"><div class="time-display-section-inner"
+		><output id="out--minutes-1">0</output
+		><output id="out--minutes-2">0</output
+	></div></div
 	><div class="time-display-divider">:</div
-	><div class="time-display-section time-display-section-seconds"
-		><div class="time-display-section-inner"><output id="out--seconds-1">0</output
-		><output id="out--seconds-2">0</output></div></div
-	><div class="time-display-divider">&middot;</div
-	><div class="time-display-section time-display-section-second-fraction"
-		><div class="time-display-section-inner"><output id="out--second-fraction-1">0</output
+	><div class="time-display-section time-display-section-seconds"><div class="time-display-section-inner"
+		><output id="out--seconds-1">0</output
+		><output id="out--seconds-2">0</output
+	></div></div
+	><div class="time-display-divider">.</div
+	><div class="time-display-section time-display-section-second-fraction"><div class="time-display-section-inner"
+		><output id="out--second-fraction-1">0</output
 	></div></div
 ></div>
 
